--- a/client/src/app/pages/auth/signup-page/signup-page.component.html
+++ b/client/src/app/pages/auth/signup-page/signup-page.component.html
@@ -1,1 +1,6 @@
-<p>signup-page works!</p>
+<div class="signup-container">
+  <h2 class="">Signup</h2>
+    <div class="">
+      <app-signup-form (formSubmit)="handleSignup($event)"></app-signup-form>
+  </div>
+</div>
