--- a/client/src/app/pages/auth/signup-page/signup-page.component.html
+++ b/client/src/app/pages/auth/signup-page/signup-page.component.html
@@ -3,4 +3,10 @@
     <div class="">
       <app-signup-form (formSubmit)="handleSignup($event)"></app-signup-form>
   </div>
+
+  <div class="redirect-login">
+    <p>Already have an account?
+      <a href="/login">Log in</a>
+    </p>
+  </div>
 </div>
