--- a/client/src/app/pages/auth/signup-page/signup-page.component.css
+++ b/client/src/app/pages/auth/signup-page/signup-page.component.css
@@ -17,3 +17,20 @@ h2 {
   text-align: center;
   margin-bottom: 20px;
 }
+
+.redirect-login {
+  text-align: center;
+  font-size: 0.9rem;
+  margin-top: 1rem;
+
+}
+
+.redirect-login a {
+  color: #015E61;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.redirect-login a:hover{
+  text-decoration: underline;
+}
