--- a/client/src/app/features/components/auth/login-form/login-form.component.html
+++ b/client/src/app/features/components/auth/login-form/login-form.component.html
@@ -1,9 +1,8 @@
-<form (submit)="login()">
+<form [formGroup]="loginForm" (ngSubmit)="login()">
   <div class="form-group">
     <input
       type="email"
-      id="email"
-      name="email" required
+      formControlName="email"
       placeholder="Email:"
       class="form-control"
     >
@@ -12,13 +11,11 @@
   <div class="form-group">
     <input
       type="password"
-      name="password" required
+      formControlName="password"
       placeholder="Password:"
       class="form-control"
     >
   </div>
 
-  <button type="submit" class="btn btn-primary">Login</button>
-
-
+  <button type="submit" [disabled]="loginForm.invalid" class="btn btn-primary">Login</button>
 </form>
