--- a/client/src/app/features/pages/auth/login-page/login-page.component.html
+++ b/client/src/app/features/pages/auth/login-page/login-page.component.html
@@ -4,7 +4,7 @@
     <p>Please enter your details.</p>
   </div>
 
-  <app-login-form></app-login-form>
+  <app-login-form (onLogin)="handleLogin($event)"></app-login-form>
 
   <p class="or-text">OR</p>
 
