video & navbar fixed

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-navbar></app-navbar>
 <router-outlet></router-outlet>
 
-<div *ngIf="isVideoVisible && (!userRole || userRole === '')" class="video-background">
+<div *ngIf="isVideoVisible" class="video-background">
   <video autoplay loop playsinline>
     <source src="assets/video/final.mov" type="video/mp4">
     Your browser does not support the video tag.
