login fixed + logout

--- a/client/src/app/shared/navbar/navbar.component.html
+++ b/client/src/app/shared/navbar/navbar.component.html
@@ -1,12 +1,20 @@
 <nav class="navbar" [class.transparent]="isTransparent">
-  <a *ngFor="let item of navItems"
-     class="nav-item"
-     [routerLink]="item.route"
-     routerLinkActive="active"
-     [routerLinkActiveOptions]="{ exact: true }">
-<!--    <img [src]="item.iconUrl" alt="{{ item.name }} icon" class="nav-icon">-->
-    <span>{{ item.name }}</span>
-  </a>
+  <ng-container *ngFor="let item of navItems">
 
+    <a *ngIf="item.name !== 'Logout'"
+       class="nav-item"
+       [routerLink]="item.route"
+       routerLinkActive="active"
+       [routerLinkActiveOptions]="{ exact: true }">
+      <span>{{ item.name }}</span>
+    </a>
 
+    <a *ngIf="item.name === 'Logout'"
+       class="nav-item"
+       style="cursor: pointer;"
+       (click)="onLogout()">
+      <span>{{ item.name }}</span>
+    </a>
+
+  </ng-container>
 </nav>
