update user - frontend

--- a/client/src/app/features/pages/profile-page/profile-page.component.html
+++ b/client/src/app/features/pages/profile-page/profile-page.component.html
@@ -1,1 +1,38 @@
-<p>profile-page works!</p>
+<div class="two-column-container">
+  <div content-section [ngClass]="{ 'expanded': hideSidebar }">
+
+    <div class="profile-header-container" (click)="openEditPopup()">
+      <app-entity-header
+        *ngIf="user"
+        [label]="'Profile'"
+        [title]="user.firstName + ' ' + user.lastName"
+        [subtitle]="user.role"
+        [imageUrl]="user.imageUrl ?? 'assets/defaultPic.jpg'">
+      </app-entity-header>
+    </div>
+
+    <app-tabs [tabs]="tabs" (tabChange)="onTabChange($event)"></app-tabs>
+
+    <div class="profile-cards-holder">
+
+      <ng-container *ngIf="activeTab === 'Certificates Overview'">
+
+      </ng-container>
+
+      <ng-container *ngIf="activeTab === 'Users Overview'">
+
+      </ng-container>
+
+      <ng-container *ngIf="activeTab === 'Quick Actions'">
+
+      </ng-container>
+
+    </div>
+  </div>
+</div>
+
+<app-edit-profile
+  *ngIf="showEditPopup && user as nonNullUser"
+  [user]="nonNullUser"
+  (close)="closeEditPopup()">
+</app-edit-profile>
