--- a/client/src/app/features/pages/profile-page/profile-page.component.html
+++ b/client/src/app/features/pages/profile-page/profile-page.component.html
@@ -15,16 +15,36 @@
 
     <div class="profile-cards-holder">
 
-      <ng-container *ngIf="activeTab === 'Certificates Overview'">
+      <ng-container *ngIf="activeTab === 'Reservation'">
+      </ng-container>
 
+      <ng-container *ngIf="activeTab === 'Make Reservation'">
+      </ng-container>
+
+      <ng-container *ngIf="activeTab === 'History'">
+      </ng-container>
+
+
+      <ng-container *ngIf="activeTab === 'Create Apartment'">
+        <div style="height: 26px"></div>
+        <app-create-apartment-page></app-create-apartment-page>
+      </ng-container>
+
+      <ng-container *ngIf="activeTab === 'My Properties'">
+        <div style="height: 26px"></div>
+        <app-properties-page></app-properties-page>
+      </ng-container>
+
+      <ng-container *ngIf="activeTab === 'Bookings'">
+        <div style="height: 26px"></div>
+      </ng-container>
+
+      <ng-container *ngIf="activeTab === 'Income'">
+        <div style="height: 26px"></div>
       </ng-container>
 
       <ng-container *ngIf="activeTab === 'Users Overview'">
-
-      </ng-container>
-
-      <ng-container *ngIf="activeTab === 'Quick Actions'">
-
+        <div style="height: 26px"></div>
       </ng-container>
 
     </div>
