--- a/client/src/app/shared/ui/input/input.component.scss
+++ b/client/src/app/shared/ui/input/input.component.scss
@@ -2,71 +2,23 @@ input {
   font-family: inherit;
   width: 100%;
   padding: 0.8rem 1rem;
-  border: 1px solid var(--color-border);
+  box-sizing: border-box;
+
+  border: 1px solid var(--color-border, #ccc);
   border-radius: 20px;
-  //background-color: var(--color-input-bg);
-  color: var(--color-text-dark);
-  transition: background-color 9999s ease-in-out 0s;
-  //font-size: 16px;
+  background-color: white;
+  color: var(--color-text-dark, #333);
 
   &:focus {
     outline: none;
-    border-color: #999;
+    border-color: #000;
   }
 }
-
-textarea.auto-textarea {
-  font-family: inherit;
-  width: 100%;
-  height: 1rem;
-  min-height: 1rem;
-  max-height: 10rem;
-  padding: 0.8rem 1rem;
-  border: 1px solid var(--color-border);
-  border-radius: 20px;
-  resize: vertical; /* korisnik može da rastegne polje */
-  color: var(--color-text-dark);
-  line-height: 1.4;
-}
-
-textarea.auto-textarea:focus {
-  outline: none;
-  border-color: #999;
-}
-
 
 :host(.underline) input {
   background: transparent;
   border: none;
-  border-bottom: 1px solid white;
+  border-bottom: 2px solid #ccc; // Vidljivija siva
   border-radius: 0;
-  color: white;
   padding: 0.5rem 0;
-
-  transition: background-color 9999s ease-in-out 0s;
-}
-
-:host(.underline) input::placeholder {
-  color: rgba(255, 255, 255, 0.6);
-}
-
-:host(.underline) input:focus {
-  border-bottom: 1px solid #00bfff;
-  outline: none;
-}
-
-input:-webkit-autofill,
-input:-webkit-autofill:hover,
-input:-webkit-autofill:focus,
-input:-webkit-autofill:active {
-  -webkit-box-shadow: 0 0 0 30px transparent inset !important;
-  -webkit-text-fill-color: var(--color-text-dark);
-}
-
-:host(.underline) input:-webkit-autofill,
-:host(.underline) input:-webkit-autofill:hover,
-:host(.underline) input:-webkit-autofill:focus,
-:host(.underline) input:-webkit-autofill:active {
-  -webkit-box-shadow: 0 0 0 30px transparent inset !important;
-  -webkit-text-fill-color: white !important; /* Promijeni boju teksta za bijelu pozadinu */
 }
