--- a/client/src/app/features/components/apartment-view-components/apartment-images/apartment-images.component.html
+++ b/client/src/app/features/components/apartment-view-components/apartment-images/apartment-images.component.html
@@ -1,17 +1,29 @@
 <div class="gallery-wrapper">
-  <div class="main-image-container">
+  <div class="main-image-container" *ngIf="activeImage">
     <img [src]="activeImage" alt="Main view" class="main-image">
     <div class="image-overlay"></div>
   </div>
 
-  <div class="thumbnails-container">
+  <div class="main-image-container placeholder" *ngIf="!activeImage && isEditMode">
+    <p>Nema odabranih slika</p>
+  </div>
+
+  <div class="upload-section" *ngIf="isEditMode">
+    <input type="file" #fileInput (change)="onFileSelected($event)" multiple accept="image/*" style="display: none;">
+    <button type="button" class="upload-btn" (click)="fileInput.click()">
+      + Dodaj slike sa računara
+    </button>
+  </div>
+
+  <div class="thumbnails-container" *ngIf="images.length > 0">
     <div
       class="thumb-item"
-      *ngFor="let img of images"
+      *ngFor="let img of images; let i = index"
       (click)="selectImage(img)"
       [class.active]="img === activeImage"
     >
       <img [src]="img" alt="Thumbnail">
+      <button *ngIf="isEditMode" class="delete-img" (click)="removeImage(i, $event)">×</button>
     </div>
   </div>
 </div>
