--- a/client/src/app/features/pages/profile-page/profile-page.component.html
+++ b/client/src/app/features/pages/profile-page/profile-page.component.html
@@ -19,6 +19,8 @@
       </ng-container>
 
       <ng-container *ngIf="activeTab === 'Make Reservation'">
+        <div style="height: 26px"></div>
+        <app-properties-page></app-properties-page>
       </ng-container>
 
       <ng-container *ngIf="activeTab === 'History'">
