--- a/client/src/app/features/pages/profile-page/profile-page.component.html
+++ b/client/src/app/features/pages/profile-page/profile-page.component.html
@@ -16,6 +16,8 @@
     <div class="profile-cards-holder">
 
       <ng-container *ngIf="activeTab === 'Reservation'">
+        <div style="height: 26px"></div>
+        <app-guest-reservations [mode]="'ACTIVE'"></app-guest-reservations>
       </ng-container>
 
       <ng-container *ngIf="activeTab === 'Make Reservation'">
@@ -24,6 +26,8 @@
       </ng-container>
 
       <ng-container *ngIf="activeTab === 'History'">
+        <div style="height: 26px"></div>
+        <app-guest-reservations [mode]="'HISTORY'"></app-guest-reservations>
       </ng-container>
 
 
@@ -39,6 +43,7 @@
 
       <ng-container *ngIf="activeTab === 'Bookings'">
         <div style="height: 26px"></div>
+        <app-reservations-requests></app-reservations-requests>
       </ng-container>
 
       <ng-container *ngIf="activeTab === 'Income'">
